# ChangeLog for net-libs/ldns
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/ldns/ChangeLog,v 1.12 2010/11/09 00:00:42 matsuu Exp $

*ldns-1.6.7 (08 Nov 2010)

  08 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> -ldns-1.6.2.ebuild,
  -ldns-1.6.3.ebuild, -ldns-1.6.3-r1.ebuild, -ldns-1.6.5.ebuild,
  +ldns-1.6.7.ebuild:
  Version bumped. Added gost USE flag. Removed old versions.

*ldns-1.6.6 (11 Aug 2010)

  11 Aug 2010; MATSUU Takuto <matsuu@gentoo.org> +ldns-1.6.6.ebuild:
  Version bumped.

  17 Jun 2010; MATSUU Takuto <matsuu@gentoo.org> ldns-1.6.5.ebuild:
  Removed libtool archive files.

*ldns-1.6.5 (16 Jun 2010)

  16 Jun 2010; MATSUU Takuto <matsuu@gentoo.org> +ldns-1.6.5.ebuild:
  Version bumped. Added python USE flag.

  02 Apr 2010; Fabian Groffen <grobian@gentoo.org> ldns-1.6.4.ebuild:
  Marked ~ppc-macos and ~x64-macos, bug #312015

  11 Mar 2010; Markos Chandras <hwoarang@gentoo.org> ldns-1.6.4.ebuild:
  Stable on amd64 wrt bug #300362

  04 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> ldns-1.6.4.ebuild:
  x86 stable wrt bug #300362, arch-tested by Andreas Schurch

*ldns-1.6.4 (20 Jan 2010)

  20 Jan 2010; MATSUU Takuto <matsuu@gentoo.org> +ldns-1.6.4.ebuild:
  Version bumped.

*ldns-1.6.3-r1 (11 Jan 2010)

  11 Jan 2010; MATSUU Takuto <matsuu@gentoo.org> +ldns-1.6.3-r1.ebuild,
  +files/ldns-1.6.3-r3151-fix-double-free.patch:
  Fixed bug #299803.

*ldns-1.6.3 (04 Dec 2009)

  04 Dec 2009; MATSUU Takuto <matsuu@gentoo.org> +ldns-1.6.3.ebuild:
  Version bumped.

  30 Nov 2009; Torsten Veller <tove@gentoo.org> ldns-1.6.2.ebuild:
  Add missing die: || "..." -> || die "..."

*ldns-1.6.2 (21 Nov 2009)

  21 Nov 2009; MATSUU Takuto <matsuu@gentoo.org> +ldns-1.6.2.ebuild,
  +metadata.xml:
  Initial import, bug #192728.
