@@ -5,25 +5,27 @@ AUX ldns-1.6.3-r3151-fix-double-free.patch 1264 RMD160 18f47bab53b72cfb9658fca61
 DIST ldns-1.6.4.tar.gz 895432 RMD160 1c9d78c01bc8ba6825cdc56b0be81236015e9ebd SHA1 9015968ad3ddd015c750c15b60e60b9cccd393ec SHA256 ad4d0142a84463ea646571656254694b5325545bc12bbb238358a0506e6eeb05
 DIST ldns-1.6.6.tar.gz 955239 RMD160 b66da600370b965712bf35c7d57fb9e745249ebb SHA1 d9615d6d0021ec35fb089635cba6401bc87ac962 SHA256 04e001d281434debf13d065bddb51d2f26a2427bcf658127bd3690640e7bff41
 DIST ldns-1.6.7.tar.gz 962100 RMD160 0c501e7bc21c1a13da8a32eb0454c219f414b919 SHA1 667173af99641997de248d211da0705874d1f030 SHA256 f718b28c9b5243ea6aba8514581d746974161eb5d6781bdbbe46f5ce13294ba8
+DIST ldns-1.6.8.tar.gz 968066 RMD160 480e85795ed48725e41fdb18770235a35030af54 SHA1 e736160f36b7dcc0303269d3c0a9be88b7ad10c4 SHA256 8f0180aa742964f7d14256c48fd4a4d175d192422dd7d00b1dbc2d5281db403e
 EBUILD ldns-1.6.4.ebuild 1273 RMD160 3e1aabc1d815c0362c24ba3ab11b7dec01fec90e SHA1 e6cc54421d884962be66728e9ba09cc81ae43729 SHA256 8c5e383c95ee23744d21d653a8c092c092d0f1c7d6bb8487d6429eafe9e13b81
 EBUILD ldns-1.6.6.ebuild 1413 RMD160 333896e762d33688e133269835f3290951be05c6 SHA1 2353528e00e57ed8396be2433098109b7c83e2f5 SHA256 f1a1b7ba3bd3fa946deaf683962e9f695fbb54f580bd0aafb0d29bb9a46c1fd3
 EBUILD ldns-1.6.7.ebuild 1473 RMD160 4b2ec4cab7facd65f058a6f770940488f8b83095 SHA1 e08d9c676ff123de1b8e5c4fdbad457cc324a64e SHA256 c3050407e0ad90f882d5a8b4d62623dd8a5af96890215e576abbfbf50b1406af
-MISC ChangeLog 1822 RMD160 44657fbf1482b084de12777246a0be6a2149e360 SHA1 5117c4a49582e4ae4857c89955dd6491448cc22e SHA256 2a1eb87820c93190908b61622ba670a514e8808bcd072db602f5d31611f8f4eb
+EBUILD ldns-1.6.8.ebuild 1539 RMD160 c23f11cadd81064d67edfec767a28154a8202035 SHA1 bc2a37e3e6835673bcf8afd859bd3e95972a86ab SHA256 b24575538cd2844243879bd30066c177d3ec8f5354b142ca5c0fc29d4d6d387f
+MISC ChangeLog 1965 RMD160 e7d36e3e2fefece750fefe01b0ad55de238e281f SHA1 050003057340243e6f3e28525bd3b6c0147a2235 SHA256 aecc0e4c582a2bc1317750ea6108b194726ff7909162762a6a3b7a711e78a2b5
 MISC metadata.xml 543 RMD160 665e41a6e71b272a1373eab9cdcebc8cedb794e2 SHA1 8bf152132525e1a975710752ea4a0b17842156b0 SHA256 f00e986f3eb952ece2c1b44cca538dcf7b6e043516acbe142733df8ca90eda3e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJM2I9BAAoJECaGw+YFKA1pixsQAIvP7hjw1/K82RYL9DJM1wLN
-Io+DCC1oeVG7641FS9ERZTBOgpjza/vXuNK+5y/C0lfn3AsxxCyteg9+xJykMjWn
-3Yj48TSpg5JDv5zUjZ8Ne8USliSsSku/+Xra/G7ucL8YxRBRIifVwQKG/7DgkCt4
-x+WwAY881g+ynDLY/8eoukhmCPngVi2w4g94HosuZhF6Z9Tvk4nlKd9obr4+Xr3J
-81DsTJpvM2njEqgGP/Z3YtWPOM7ryfheHCxdTD9FmdtmKFW/vj04OkvYLFn+2WfF
-vZf0iJdQdK2tcLAJSSd286WH+MSnSj/W2U48cdXuyWmlKeKihHgCl3kPwe9C4qPl
-Xwm6d/YDg8vhVxHR+cCfEpDuL/0WSkSLWJONT/nfQHdPIFZeKWZGdpGlt9IW7PCm
-XNYOLuP/ywL1Zqb4Pn0/1AKKLb8DtPA/llCMZ3ZWaoR2HXX55x2Fzyf/D6a52G3V
-cEqUJb57ciGclvS96oUQZ8eGFu5uoGbQJkmJQxGjLvSZOm1nv1mJGac//5f5ZWSs
-vzMCJ+iWAzlhvw5WDJrdrfuS5vT+h3qnkSD78lyQTyUleWXVANlX3iLLPs+VutGz
-u0Cc+XhBXIj8a0irWijs8RkJOoHqGG9lAZ1bIVbngxML1vts5jcNwebCeHDS5FKY
-hIvr7SS9exJ7ElVW5So8
-=pU2t
+iQIcBAEBAgAGBQJNPtHwAAoJECaGw+YFKA1pHucP/3KCCVRHPU64jHIW5nEd0IUL
+5jjLkFCquLdAZAIPrxS4opppG7xO5tAWvQcNQ1UdsUsghzMBoXOP0Prarr+AASR6
+bREh5tG3HXNOGq9OvXVPffxE3ZeuBkX0Yec2R0lFQ8U3ONqFKd2NDzzptazCvj1m
+qzN9NUM67kmvchySGJ2h/7Fse8Uz+ut8Fm4yozqFIPUxBxymh9VMFHqC0dZJLX5q
+HtIblpsrCPAt7Ytz86zpp0QFF9BjJL0vyaHku1AbK0d7z+u9o1ks7a18Ro+8x+ta
+AhAhzn4Fl0/hpaRA8WkB5b7hTytNtlNmQ8QdePTMFLJ3kyT/EOKTsrD2j4+McOIG
+ePmMF8zkOQVFTVuv51Pj/bw/dHgBc4mhn1yBEougILCQam430uyyFi8VnfLeEOIR
+in0CsrXV3Jv59vGx1J1lywXrEEsIjxNxhFC2IOArOEO46Zrg2TUKU9sCzaYp8zB2
+fdaMY0XfdhDXbJLQeJV3PLO2m3Cbuo7L/x3fLq1IR4vT2S4y1ruGnTNpcT+vN9P5
+7VNJwDHtgiHx8PAXVMvPH0UKjeaJ/zPPknIOIWL33nDyuvRmD0IIKiwql6jiCmdT
+LXL5VmBVxXp20Ico41gk2n/biD44HngeWsebIKqBZ7MjYfHO/cn6G2NlNwzO7iID
+pZYQLUHL4AqpH5GaKvJI
+=ICak
 -----END PGP SIGNATURE-----
