@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/ldns
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/ldns/ChangeLog,v 1.12 2010/11/09 00:00:42 matsuu Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/ldns/ChangeLog,v 1.13 2011/01/25 13:36:37 matsuu Exp $
+
+*ldns-1.6.8 (25 Jan 2011)
+
+  25 Jan 2011; MATSUU Takuto <matsuu@gentoo.org> +ldns-1.6.8.ebuild:
+  Version bumped. Added static-libs USE flag.
 
 *ldns-1.6.7 (08 Nov 2010)
 
